# pdf-translator

./: .gitignore  Makefile  pyproject.toml
src/: engine.py  main.py
